Sync quality control application updates
